Fixed UI spacing with cards

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -207,7 +207,7 @@ button.publish {
 .cards {
 	float: left;
 	width: 80px;
-	padding-top: 60px;
+	padding-top: 80px;
 	margin-left: 40px;
 	position: relative;
 }
